@@ -1,3 +1,15 @@
+2018-02-05  Yousuke Kimoto  <yousuke.kimoto@sony.com>
+
+        [WinCairo] Refine WebKitLegacy and WebKit build for wincairo
+        https://bugs.webkit.org/show_bug.cgi?id=182478
+
+        Reviewed by Alex Christensen.
+
+        For TestWebKitAPI, sources related to WebKitLegacy are built
+        at WebKit build. Those files should be reffered for WebKitLegacy build.
+
+        * TestWebKitAPI/PlatformWin.cmake:
+
 2018-02-05  Daniel Bates  <dabates@apple.com>
 
         REGRESSION (r217572): run-webkit-tests exits without emitting newline character
